tests/NormalTests/paczka1/small_fuzzy/26089070.err
Error in line 4: 1YywDFVA A835 89,8
Error in line 5: 1YywDFVA A464 82,6
Error in line 14: YTh7rrjqG AQ35 0,0
